# IQPyramideSolver

./: .pre-commit-config.yaml  README.md  pyproject.toml
pyramide/: Color.py  Form.py  Game.py  GameBoard.py  GameBoardGUI.py  GamePosition.py  Piece.py  SolvedGame.py  color.py  form.py  game.py  game_board.py  game_board_gui.py  game_position.py  piece.py  solved_game.py
scripts/: game1.py  game2.py  game3.py  iq_pyramide_helpers.py
src/: Piece.py
test/: Piece.test.py  test_Form.py  test_Game.py  test_GameBoard.py  test_Piece.py  test_game.py  test_game_board.py
tests/: test_form.py  test_piece.py
